--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -2,24 +2,11 @@ name: Laravel CI
 
 on:
   push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: testing
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s --health-timeout=5s --health-retries=3
-        ports:
-          - 3306:3306
 
     steps:
       - name: Checkout code
@@ -28,35 +15,16 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
-          extensions: mbstring, bcmath, xml, zip, pdo_mysql
-          coverage: none
+          php-version: '8.1'
 
-      - name: Cache Composer dependencies
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      - name: Install Composer dependencies
+      - name: Install composer dependencies
+        working-directory: ./backend
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Setup application environment
-        run: |
-          cp .env.example .env
-          php artisan key:generate
+      - name: Generate app key
+        working-directory: ./backend
+        run: php artisan key:generate
 
-      - name: Run migrations
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_DATABASE: testing
-          DB_USERNAME: root
-          DB_PASSWORD: root
-        run: php artisan migrate --force
-
-      - name: Run phpunit
-        run: vendor/bin/phpunit --testdox
+      - name: Run tests
+        working-directory: ./backend
+        run: php artisan test
