--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -2,29 +2,26 @@ name: Laravel CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.1'
+    - name: Setup PHP 8.3
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+        extensions: mbstring, intl, pdo_mysql
+        tools: composer:v2
 
-      - name: Install composer dependencies
-        working-directory: ./backend
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+    - name: Install Dependencies
+      run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Generate app key
-        working-directory: ./backend
-        run: php artisan key:generate
-
-      - name: Run tests
-        working-directory: ./backend
-        run: php artisan test
+    - name: Run Tests
+      run: php artisan test
