--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -1,4 +1,4 @@
-name: Laravel CI
+name: Laravel Build Automation
 
 on:
   push:
@@ -7,21 +7,38 @@ on:
     branches: [ "main" ]
 
 jobs:
-  laravel-tests:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      # 1. Checkout repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Setup PHP 8.3
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.3'
-        extensions: mbstring, intl, pdo_mysql
-        tools: composer:v2
+      # 2. Setup PHP
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, pdo, pdo_mysql
+          coverage: none
 
-    - name: Install Dependencies
-      run: composer install --no-progress --prefer-dist --optimize-autoloader
+      # 3. Install Composer
+      - name: Install Composer Dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-    - name: Run Tests
-      run: php artisan test
+      # 4. Copy .env example
+      - name: Copy .env
+        run: cp .env.example .env
+
+      # 5. Generate App Key
+      - name: Generate APP_KEY
+        run: php artisan key:generate
+
+      # 6. Run PHP Unit Tests
+      - name: Run Tests
+        run: php artisan test --without-tty
+
+      # 7. DONE
+      - name: Build Completed
+        run: echo "✅ Build automation success!"
