--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -10,23 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      # 1. Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      # 2. Setup Node (gunakan cache none untuk menghindari lockfile mandatory)
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: none   # ✅ tidak wajib lockfile
+          cache: none
 
-      - name: Install deps
+      # 3. Install dependencies (lockfile sudah ada di root)
+      - name: Install dependencies
         run: npm install
 
+      # 4. Setup Expo CLI
       - name: Setup Expo
         uses: expo/expo-github-action@v8
         with:
           expo-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
+      # 5. Build Android
       - name: Build Android
         run: npx expo build:android --non-interactive
