--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -4,28 +4,40 @@ on:
   push:
     branches:
       - main
+      - develop
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          # cache: npm   # kalau mau caching, aktifkan lagi
 
+      # 3. Install dependencies (tidak menggunakan working-directory khusus)
       - name: Install dependencies
         run: npm install
 
+      # 4. Setup Expo CLI
       - name: Setup Expo
         uses: expo/expo-github-action@v8
         with:
           expo-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
+      # 5. Build Android
       - name: Build Android
         run: npx expo build:android --non-interactive
+
+      # (opsional) 6. Build iOS
+      #- name: Build iOS
+      #  run: npx expo build:ios --non-interactive
