--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -1,43 +1,43 @@
-name: Expo Build CI
+name: MMIC CI
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: ["main"]
   pull_request:
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          path: .   # ✅ pastikan di root repo
 
-      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
-          # cache: npm   # kalau mau caching, aktifkan lagi
+          node-version: 18
+          cache: 'npm'   # ✅ caching yang benar untuk npm
 
-      # 3. Install dependencies (tidak menggunakan working-directory khusus)
       - name: Install dependencies
+        working-directory: .
         run: npm install
 
-      # 4. Setup Expo CLI
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+      - name: Validate project structure (Expo Doctor)
+        run: npx expo-doctor
 
-      # 5. Build Android
-      - name: Build Android
-        run: npx expo build:android --non-interactive
+      - name: Run TypeScript check
+        run: npx tsc --noEmit
 
-      # (opsional) 6. Build iOS
-      #- name: Build iOS
-      #  run: npx expo build:ios --non-interactive
+      - name: Run ESLint
+        run: npm run lint --if-present
+
+      - name: Run tests (jika ada)
+        run: npm test --if-present
+
+      - name: Build (Expo / React Native, optional)
+        run: |
+          echo "Skipping native build. Using Expo managed workflow."
